# agent-mesh

./: .gitignore  AGENTS.md  CHANGELOG.md  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml
docs/: README.md  advanced-dashboard-guide.md  cli-reference.md  contributing.md  getting-started.md  index.md  usage-guide.md
docs/design/: backup-history.md  cli-envelope-contract.md  index.md  model-mesh.md  (+7 more)
tests/: conftest.py  test_adapter_capabilities.py  test_agent_targets_full.py  test_audit_policy.py  test_backup_service.py  test_claude_export.py  test_cli_envelope.py  test_cli_smoke.py  test_command_plan_endpoint.py  test_command_schemas.py  test_conflict_policy.py  test_diff_and_conflicts.py  test_diff_renderer.py  test_entrypoints.py  test_full_diff_conflicts.py  test_golden_cli.py  test_history_cli.py  test_history_schema.py  test_local_api.py  test_local_api_server.py  test_local_api_server_merged.py  test_local_api_threat_model.py  test_memory_mesh.py  test_model_mesh.py  test_naming_and_models.py  test_native_validation.py  test_overview_cli.py  test_package_registry.py  test_package_service.py  test_package_source_identity.py  test_package_verify.py  test_path_guard.py  test_prompt_m7_version_multitarget_conflict.py  test_prompt_service.py  test_prompt_target_m6.py  test_recipes.py  test_registry_reindex.py  test_remote_fetcher.py  test_rollback_apply_service.py  test_rollback_cli.py  (+21 more)
(+88 files in other folders)
